Fixed bug where browser was not extending the full length on mobile devices. Source: http://stackoverflow.com/questions/4617872/white-space-showing-up-on-right-side-of-page-when-background-image-should-extend

--- a/css/app.css
+++ b/css/app.css
@@ -31,10 +31,13 @@
  /*************************
  * 00. Defaults
  *************************/
- body, html {
-    width: 100%;
-    height: 100%;
-}
+ html,body {
+     width: 100%;
+     height: 100%;
+     margin: 0px;
+     padding: 0px;
+     overflow-x: hidden;
+ }
 
 body, h1, h2, h3, h4, h5 {
     font-family: 'Dosis', sans-serif;
